@@ -20,9 +20,11 @@
 
 package org.jcae.mesh.mesher.algos1d;
 
-import org.jcae.mesh.mesher.ds.*;
-import org.jcae.mesh.cad.*;
-import org.jcae.mesh.*;
+import org.jcae.mesh.mesher.ds.MEdge1D;
+import org.jcae.mesh.mesher.ds.MNode1D;
+import org.jcae.mesh.mesher.ds.SubMesh1D;
+import org.jcae.mesh.mesher.ds.MMesh1D;
+import org.jcae.mesh.cad.CADEdge;
 import java.util.ArrayList;
 import java.util.Iterator;
 import org.apache.log4j.Logger;
@@ -69,7 +71,7 @@ public class Refine
 			throw new java.lang.IllegalArgumentException("Division number must be > 1");
 
 		/* Explore the shape for each edge */
-		Iterator ite = mesh1d.getTEdgeList().iterator();
+		Iterator ite = mesh1d.getTEdgeIterator();
 		while (ite.hasNext())
 		{
 			CADEdge E = (CADEdge) ite.next();
